--- a/05-exercises.Rmd
+++ b/05-exercises.Rmd
@@ -18,4 +18,5 @@ Exercises | Name | Solution (Python)
 \@ref(exr:it003013) |Heat requirement for a Batch reactor| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_019BatchReactorHX.ipynb)
 \@ref(exr:it003014) |Dynamic simulation of a non-isothermal batch reactor| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_020BatchReactorDyn.ipynb)
 \@ref(exr:it004001) |Calculations of RTD and distribution functions curves from pulse impulse method| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_021RTDimpulse.ipynb)
-\@ref(exr:it004002) |Calculations of RTD and distribution functions curves from step change method| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_031RTDstep.ipynb)
+\@ref(exr:it004002) |Calculations of RTD and distribution functions curves from step change method| [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_022RTDstep.ipynb)
+- | Using RTDs as diagnotic tools | [link](https://github.com/aliglara/ebook_che5314_ucv/blob/main/codes/lect_023RTDasDiagnosticTool.ipynb)
